--- a/app/views/songs/new.html.erb
+++ b/app/views/songs/new.html.erb
@@ -2,10 +2,12 @@
 
 <%= form_for @song  do |f| %>
   <%= f.label :title %>
-  <%= f.text_field :title %>
+  <%= f.text_field :title %><br>
+  <%= f.label :artist_name %>
+  <%= f.text_field :artist_name %><br>
+  <%= f.label :genre_name %>
+  <%= f.collection_select :genre_name, Genre.all, :name, :name %>
   <br />
 
   <%= f.submit %>
 <% end %>
-
-
