--- a/app/views/songs/new.html.erb
+++ b/app/views/songs/new.html.erb
@@ -5,8 +5,7 @@
   <%= f.text_field :title %><br>
   <%= f.label :artist_name %>
   <%= f.text_field :artist_name %><br>
-  <%= f.label :genre %>
-  <%= f.collection_select :song_genre_ids, Genre.all, :name, :name %>
+  <%= f.collection_select :genre_id, Genre.all, :id, :name %>
   <br />
 
   <%= f.submit %>
