--- a/app/views/songs/new.html.erb
+++ b/app/views/songs/new.html.erb
@@ -5,7 +5,9 @@
   <%= f.text_field :title %><br>
   <%= f.label :artist_name %>
   <%= f.text_field :artist_name %><br>
-  <%= f.collection_select :genre_id, Genre.all, :id, :name %>
+  <%= f.collection_select :genre_id, Genre.all, :id, :name %><br>
+  <%= f.label :note %>
+  <%= f.text_area :note %><br>
   <br />
 
   <%= f.submit %>
