--- a/app/views/songs/new.html.erb
+++ b/app/views/songs/new.html.erb
@@ -7,9 +7,9 @@
   <%= f.text_field :artist_name %><br>
   <%= f.collection_select :genre_id, Genre.all, :id, :name %><br>
   <%= f.label :notes %>
-  <%= f.text_area :note %>
-  <%= f.text_area :note %>
-  <%= f.text_area :note %><br>
+  <%= f.text_area :notes %>
+  <%= f.text_area :notes %>
+  <%= f.text_area :notes %><br>
   <br />
 
   <%= f.submit %>
