--- a/app/views/songs/new.html.erb
+++ b/app/views/songs/new.html.erb
@@ -6,7 +6,9 @@
   <%= f.label :artist_name %>
   <%= f.text_field :artist_name %><br>
   <%= f.collection_select :genre_id, Genre.all, :id, :name %><br>
-
+  <%= f.label :notes %>
+    <input name='song[note_contents][]' id='song_notes_1'>
+    <input name='song[note_contents][]' id='song_notes_2'>
   <br />
 
   <%= f.submit %>
