--- a/app/views/songs/new.html.erb
+++ b/app/views/songs/new.html.erb
@@ -7,8 +7,8 @@
   <%= f.text_field :artist_name %><br>
   <%= f.collection_select :genre_id, Genre.all, :id, :name %><br>
   <%= f.label :notes %>
-    <input name='song[note_contents][]' id='song_notes_1'>
-    <input name='song[note_contents][]' id='song_notes_2'>
+    <input name='song[note_contents][]'>
+    <input name='song[note_contents][]'>
   <br />
 
   <%= f.submit %>
