--- a/app/views/songs/new.html.erb
+++ b/app/views/songs/new.html.erb
@@ -7,8 +7,8 @@
   <%= f.text_field :artist_name %><br>
   <%= f.collection_select :genre_id, Genre.all, :id, :name %><br>
   <%= f.label :notes %>
-  <input id="song_notes_1" name="song[note_contents][]" value="<%= @song.notes.first.content if @song.notes.length > 0%>">
-<input id="song_notes_2" name="song[note_contents][]" value="<%= @song.notes[1].content if @song.notes.length > 1%>">
+  <input type="text" id="song_notes_1" name="song[note_contents][]">
+  <input type="text" id="song_notes_2" name="song[note_contents][]">
   <br />
 
   <%= f.submit %>
