--- a/app/views/songs/new.html.erb
+++ b/app/views/songs/new.html.erb
@@ -7,8 +7,8 @@
   <%= f.text_field :artist_name %><br>
   <%= f.collection_select :genre_id, Genre.all, :id, :name %><br>
   <%= f.label :notes %>
-  <input type="text" id="song_notes_attributes_0_content" name="song[note_contents][]">
-  <input type="text" id="song_notes_attributes_1_content" name="song[note_contents][]">
+  <input name="song[note_contents][]">
+  <input name="song[note_contents][]">
   <br />
 
   <%= f.submit %>
